# non-artificial_ai-security

./: .env.example  .gitignore  docker-compose.yml  package-lock.json  readme.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LoadingSteps.tsx  ScanForm.tsx  SearchBar.tsx  SecurityResults.tsx
frontend/components/ui/: buttons.tsx  card.tsx
frontend/src/app/: globals.css  page.module.css  page.tsx
frontend/src/components/: ScanResult.tsx  UrlScanBox.tsx
mcp/: Dockerfile  main.py  pyproject.toml
